--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,8 @@
-<h1>Pages#home</h1>
+<h1>Chat App</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
 
 <% if current_user %>
+    <%= link_to "Start Chatting", rooms_path%>
     <%= button_to "Logout", destroy_user_session_path, method: :delete %>
 <% else %>
     <%= link_to "Login", new_user_session_path %>
