--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -3,8 +3,8 @@
         <h5> <%= current_user.email %> </h5>
         <h4> Users </h4>
         <%= turbo_stream_from "users" %>
-        <div id="users">
-            <%= render @users %>
+        <div id="users" data-controller="user-list">
+            <%= render "users/users", users: @users %>
         </div>
     </div>
     <div id="room_container" class="col-md-8 col-sm-8 bg-dark text-light">
