--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -57,3 +57,9 @@
    margin-bottom: 10px;
    background-color: #555555;
  }
+ .last-message,
+ .last-message-time {
+   font-size: 12px;
+   color: #aaa;
+   margin-top: 5px;
+ }
