--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,3 +1,12 @@
-<div>
-    <%= link_to user.email, user %>
+<div class="user">
+    <div class="row">
+      <div class="col-12 d-flex align-items-center justify-content-between">
+        <%= link_to user.email, user, class:'ms-2 me-auto username', data: {turbo: "false"}%>
+      </div>
+    </div>
+    <%= turbo_frame_tag [dom_id(room), "user_last_message"] do %>
+      <%= render "users/last_message", 
+        last_message: last_message, 
+        sender: sender %>
+    <% end %>
 </div>
